update pickCleaner list and add/remove action

--- a/fe/src/app/booking/booking.component.html
+++ b/fe/src/app/booking/booking.component.html
@@ -148,7 +148,7 @@
                   <h6 class="text-primary text-uppercase">Nhân viên dọn dẹp</h6>
                   <p class="description mt-3">Dịch vụ được lựa chọn theo các tiêu chí liên quan tới diện tích, khu vực
                     dọn dẹp, HSM sẽ cung cấp những người dọn dẹp thích hợp và tốt nhất tới khách hàng.<span>Người dùng
-                      cũng có thể </span><span class="action-cleaner" (click)="pickCleaner()"> <u>chọn người dọn dẹp</u>
+                      cũng có thể </span><span class="action-cleaner" (click)="pickCleaner()"> <u><b>chọn người dọn dẹp</b></u>
                     </span></p>
 
                   <h6 class="text-primary text-uppercase">Phương thức thanh toán</h6>
