--- a/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.html
@@ -10,27 +10,76 @@
             <button mat-button class="filter_btn" (click)="searchCleaner()">Tìm kiếm</button>
           </span></div>
       </div>
-      <div class="table-responsive">
+      <!-- listPick.length > 0  -->
+      <div class="table-responsive" *ngIf="true">
         <div class="showtime-options">
-          <div class="select-date-container" height="140px" cellsToShow="4" *ngIf="listCleaner.length > 0">
-            <!-- [ngClass]="{'selected':selectedCleaner===cleaner.cleanerId}" -->
-            <div class="datetimeBtn" (click)="viewDetailCleaner(cleaner)" *ngFor="let cleaner of listCleaner">
+          <div style="margin-top: 1rem;">Các nhân viên dọn dẹp đã được chọn:</div>
+          <!-- listPick.length > 0  -->
+          <div class="select-date-container" height="140px" *ngIf="true">
+            <div class="datetimeBtn" (click)="viewDetailCleaner(cleaner)" *ngFor="let cleaner of listA">
+              <i class="add-icon fas fa-times closeIcon" (click)="addCleaner(cleaner)"></i>
               <div class="top">
-                <!-- <img src=""> -->
-                {{cleaner.name}}
+                <img src="../hms/assets/img/{{cleaner.gender}}.jpg">
               </div>
               <div class="bottom">
                 <div class="cleaner-name">{{cleaner.name}}
-                  <div style="font-size: 13px;"> Giới tính: {{cleaner.gender}} </div>
+                  <div style="font-size: 13px;"> Giới tính: {{cleaner.gender == 'Male' ? 'Nam' : 'Nữ' }} </div>
                 </div>
-                <div class="d-flex align-items-center">
+                <div class="align-items-center">
                   <span class="mr-2" *ngIf="cleaner.averageRating != 0">{{cleaner.averageRating}}</span>
-                  <div class="star-rating" [innerHTML]="generateStarRating(cleaner.averageRating) + ' (' + cleaner.ratingNumber + ')'"> </div>
+                  <span class="star-rating"
+                    [innerHTML]="generateStarRating(cleaner.averageRating) + ' (' + cleaner.ratingNumber + ')'"> </span>
                 </div>
               </div>
             </div>
-
-            <i *ngIf="serviceAddOns" class="fas fa-check-square" (click)="removeAddOns()"></i>
+          </div>
+        </div>
+        <!-- listPick.length > 0  -->
+        <hr *ngIf="true">
+        <div class="showtime-options">
+          <div style="margin-top: 1rem;" class="list-title">Danh sách nhân viên dọn dẹp sẵn sàng đối với lịch dọn của
+            bạn:</div>
+          <div class="error">(*Danh sách nhân viên sẽ thay đổi nếu khách hàng thay đổi lịch dọn)</div>
+          <!-- listCleaner.length < 6 && listCleaner.length > 0 -->
+          <div class="select-date-container" height="140px" *ngIf="true" style="padding-top: -1rem;">
+            <div class="datetimeBtn" (click)="viewDetailCleaner(cleanerA)" *ngFor="let cleanerA of listCleaner">
+              <i class="add-icon fas fa-plus addIcon" (click)="addCleaner(cleanerA)"></i>
+              <div class="top">
+                <img src="../hms/assets/img/{{cleanerA.gender}}.jpg">
+              </div>
+              <div class="bottom">
+                <div class="cleaner-name">{{cleanerA.name}}
+                  <div style="font-size: 13px;"> Giới tính: {{cleanerA.gender == 'Male' ? 'Nam' : 'Nữ' }} </div>
+                </div>
+                <div class="align-items-center">
+                  <span class="mr-2" *ngIf="cleanerA.averageRating != 0">{{cleanerA.averageRating}}</span>
+                  <span class="star-rating"
+                    [innerHTML]="generateStarRating(cleanerA.averageRating) + ' (' + cleanerA.ratingNumber + ')'"> </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- listCleaner.length < 11 && listCleaner.length > 5 -->
+        <div class="showtime-options">
+          <!-- listCleaner.length < 11 && listCleaner.length > 5 -->
+          <div class="select-date-container" height="140px" *ngIf="true">
+            <div class="datetimeBtn" (click)="viewDetailCleaner(cleanerB)" *ngFor="let cleanerB of listB">
+              <i class="add-icon fas fa-plus addIcon" (click)="addCleaner(cleanerB)"></i>
+              <div class="top">
+                <img src="../hms/assets/img/{{cleanerB.gender}}.jpg">
+              </div>
+              <div class="bottom">
+                <div class="cleaner-name">{{cleanerB.name}}
+                  <div style="font-size: 13px;"> Giới tính: {{cleanerB.gender == 'Male' ? 'Nam' : 'Nữ' }} </div>
+                </div>
+                <div class="align-items-center">
+                  <span class="mr-2" *ngIf="cleanerB.averageRating != 0">{{cleanerB.averageRating}}</span>
+                  <span class="star-rating"
+                    [innerHTML]="generateStarRating(cleanerB.averageRating) + ' (' + cleanerB.ratingNumber + ')'"> </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
