--- a/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.scss
+++ b/fe/src/app/booking/pick-cleaner-dialog/pick-cleaner-dialog.scss
@@ -1972,7 +1972,7 @@ h6 {
 .error {
   font-size: 11px;
   color: #FF0000;
-  // margin-bottom: 15px;
+  margin-bottom: -15px;
   float: left;
   width: 100%;
 }
