--- a/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
@@ -5,20 +5,102 @@
     </div>
     <div class="content">
       <div class="content-scroll">
-        <!-- <div class="title_note"> Đơn dịch vụ định kỳ ngày {{ date }} </div>
-        <div class="title_note rednoti"> *Dịch vụ tiện ích được thêm theo ngày đối với lựa chọn "Dịch vụ định kỳ":</div>
-        <div class="table-responsive" *ngFor="let list of parentService">
-          <input type="checkbox" [(ngModel)]="list.checked " (click)="checkService(list.name.parent.name)"> {{ list.name.parent.name }}
-        </div>
-        <div class="listAdvanceService"> Các dịch vụ tiện ích đăng ký: {{ textListAdvanceService }} </div> -->
+        <div class="cleaner-information">
+          <div class="left">
+            <img src="../hms/assets/img/{{cleanerGemder}}.jpg">
+          </div>
+          <div class="right"> 
 
+            <div class="cleaner-name">{{cleanerName}}
+              <div style="font-size: 13px;"> Giới tính: {{cleanerGemder == 'Male' ? 'Nam' : 'Nữ' }} </div>
+            </div>
+            <div class="align-items-center">
+              <span class="mr-2" *ngIf="averageRating != 0">{{averageRating}}</span>
+              <span class="star-rating"
+                [innerHTML]="generateStarRating(averageRating) + ' (' + ratingNumber + ')'"> </span>
+            </div>
+          </div>
+        </div>
+        <div class="">
+          <p>Đánh giá & phản hồi của người dùng</p>
+        </div>
+        <div class="table-responsive">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Tên đơn dịch vụ</th>
+                <th scope="col">Ngày làm</th>
+                <th scope="col">Loại nhà</th>
+                <th scope="col">Số tầng</th>
+                <th scope="col">Diện tích</th>
+                <th scope="col">Chất lượng phục vụ</th>
+                <th scope="col">Phản hồi</th>
+                <!-- <th scope="col"></th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let service of history">
+                <th scope="row">
+                  <div class="media align-items-center">
+                    <div class="media-body">
+                      <span class="mb-0 text-sm">{{service.name}}</span>
+                    </div>
+                  </div>
+                </th>
+                <td>
+                  {{service.workDate}}
+                </td>
+                <td>
+                  {{service.houseType}}
+                </td>
+                <td>
+                  {{service.floorNumber}}
+                </td>
+                <td>
+                  {{service.floorArea}}
+                </td>
+                <td>
+                  <div class="d-flex align-items-center">
+                    <span class="mr-2">{{service.ratingScore}}</span>
+
+                    <div class="star-rating" [innerHTML]="generateStarRating(service.ratingScore)"></div>
+                  </div>
+                </td>
+                <td>
+                  {{service.review}}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-footer py-4">
+          <nav aria-label="...">
+            <ul class="pagination justify-content-end mb-0">
+              <li class="page-item disabled">
+                <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                  <i class="fas fa-angle-left"></i>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item active">
+                <a class="page-link" href="javascript:void(0)">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">
+                  <i class="fas fa-angle-right"></i>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
 
 
-    </div>
-    <div class="button-submit">
-      <button mat-button class="btn" (click)="confirm()">Bổ sung</button>
-      <button mat-button class="btn" (click)="cancel()">Hủy</button>
     </div>
   </div>
 </div>
