--- a/fe/src/app/customer/list-customer/list-customer.component.html
+++ b/fe/src/app/customer/list-customer/list-customer.component.html
@@ -56,7 +56,7 @@
                       <img alt="Image placeholder" src="../assets/img/theme/bootstrap.jpg">
                     </a>
                     <div class="media-body">
-                      <span class="mb-0 text-sm">{{customer.name}}</span>
+                      <span class="mb-0 text-sm">{{customer.fullName}}</span>
                     </div>
                   </div>
                 </th>
@@ -78,7 +78,7 @@
                       <i class="fas fa-ellipsis-v"></i>
                     </a>
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
-                      <a class="dropdown-item" href="/user-profile?customerId={{customer.customerId}}">Xem thông tin</a>
+                      <a class="dropdown-item" href="/hms/user-profile?customerId={{customer.customerId}}">Xem thông tin</a>
                       <a class="dropdown-item" (click)="changeStatus()">Đổi trạng thái</a>
                       <a class="dropdown-item" (click)="removeUser(customer.customerId)">Xóa</a>
                     </div>
