--- a/fe/src/app/employee/tables.component.html
+++ b/fe/src/app/employee/tables.component.html
@@ -90,7 +90,7 @@
               <tr *ngFor="let cleaner of listCleaner">
                 <th scope="row">
                   <div class="media align-items-center">
-                    <a [routerLink]="['/user-profile/', cleaner.cleanerId]" class="avatar rounded-circle mr-3">
+                    <a [routerLink]="['/profile/', cleaner.cleanerId]" class="avatar rounded-circle mr-3">
                        <img alt="Image placeholder" src="../assets/img/theme/bootstrap.jpg">
                     </a>
                     <div class="media-body">
