--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -1,22 +1,25 @@
 <!-- Màn hình guest/customer -->
-<div *ngIf="false">
-    <app-navbar></app-navbar>
+<div *ngIf="(customerNavbar || guestNavbar) && isAuthenticated$ | async">
+    <app-navbar [customerNavbar]="customerNavbar" [guestNavbar]="guestNavbar" [username]="username"></app-navbar>
     <!-- Sidenav -->
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <app-footer *ngIf="customerNavbar"></app-footer>
 </div>
 
 <!-- Màn hình quản lý -->
-<div *ngIf="true">
-    <app-sidebar></app-sidebar>
-    <!-- [ngClass]="{'main-content':adminNavbar===true}" -->
+<div *ngIf="(cleanerNavbar || adminNavbar) && isAuthenticated$ | async">
+    <app-sidebar [cleanerNavbar]="cleanerNavbar" [adminNavbar]="adminNavbar" [username]="username"></app-sidebar>
     <div class="main-content">
         <!-- Top navbar -->
-        <app-navbar></app-navbar>
+        <app-navbar [cleanerNavbar]="cleanerNavbar" [adminNavbar]="adminNavbar" [username]="username"></app-navbar>
         <!-- Pages -->
         <router-outlet></router-outlet>
-        <!-- <div class="container-fluid">
-            <app-footer></app-footer>
-        </div>  -->
     </div>
+</div>
+
+<div #guestCustomerTemplate *ngIf="guestNavbar">
+    <app-navbar [customerNavbar]="customerNavbar" [guestNavbar]="guestNavbar" [username]="username"></app-navbar>
+    <!-- Sidenav -->
+    <router-outlet></router-outlet>
+    <app-footer *ngIf="customerNavbar"></app-footer>
 </div>
