--- a/fe/src/app/shared/footer/footer.component.html
+++ b/fe/src/app/shared/footer/footer.component.html
@@ -52,12 +52,12 @@
 <footer *ngIf="!footerUser" class="footer">
   <div class="row align-items-center justify-content-xl-between">
     <div class="col-xl-6">
-      <div class="copyright text-center text-xl-left text-muted">
+      <div class="copyright text-center text-xl-left text-muted" style="padding-left: 5rem;">
         &copy; {{ test | date: "yyyy" }} <a href="" class="font-weight-bold ml-1" target="_blank">Dịch vụ dọn dẹp chất lượng hàng đầu</a>
       </div>
     </div>
     <div class="col-xl-6">
-      <ul class="nav nav-footer justify-content-center justify-content-xl-end">
+      <ul class="nav nav-footer justify-content-center justify-content-xl-end" style="padding-right: 5rem;">
         <li class="nav-item">
           <a href="" class="nav-link" target="_blank">H.S.M</a>
         </li>
