--- a/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
+++ b/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
@@ -2,41 +2,24 @@
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
-      <div class="row">
+      <div class="row" style="padding: 0 5rem;">
         <div class="col-xl-6 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
+          <div class="card card-stats mb-4 mb-xl-0" style="height: 85px !important; padding: 0 !important;">
             <div class="card-body">
               <div class="row">
                 <div class="col search-emp">
-                  <!-- <div class="search-name">
-                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Tên đơn dịch vụ</h5>
-                    <input #serviceName id="serviceName" placeholder="Booking #1" [(ngModel)]="name" type="text"
-                      aria-describedby="serviceName-help" maxlength="50">
-                  </div> -->
-
                   <div class="search-rate">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Đánh giá</h5>
                     <select [(ngModel)]="searchRate" id="rate" aria-describedby="rate-help" title="đánh giá">
                       <option *ngFor="let rate of rateRange" [value]="rate">{{ rate }}</option>
                     </select>
                   </div>
-
-                  <!-- <div class="search-rate">
-                    <h5 class="card-title text-uppercase text-muted mb-0 font14">Loại nhà</h5>
-                    <select [(ngModel)]="searchHouseType" id="houseType" aria-describedby="houseType-help"
-                      title="Loại nhà">
-                      <option *ngFor="let type of houseType" [value]="type">{{ type }}</option>
-                    </select>
-                  </div> -->
-
                   <div class="search-date">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
                     <input placeholder="Booking #1" [(ngModel)]="date" type="text"
                       aria-describedby="date-help" maxlength="50">
                   </div>
-
                 </div>
-
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow" style="cursor: pointer;"
                     (click)="search()">
@@ -52,9 +35,9 @@
   </div>
 </div>
 <!-- Page content -->
-<div class="container-fluid mt--7">
+<div class="container-fluid mt--7" style="min-height: 440px;">
   <!-- Table -->
-  <div class="row">
+  <div class="row" style="padding: 0 5rem;">
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
