--- a/fe/src/app/shared/navbar/navbar.component.html
+++ b/fe/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Màn hình guest/customer -->
-<nav *ngIf="false" id="navbar-main"
+<nav *ngIf="customerNavbar || guestNavbar" id="navbar-main"
   class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/home']">
@@ -31,14 +31,14 @@
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-collection d-lg-none"></i>
-            <span class="nav-link-inner--text">Trang chủ</span>
+            <span class="nav-link-inner--text" [routerLink]="['/introduction']">Trang chủ</span>
           </a>
-          <div class="dropdown-menu">
+          <!-- <div class="dropdown-menu">
             <a [routerLink]="['/introduction']" class="dropdown-item">Giới thiệu</a>
-            <a [routerLink]="['/user-profile']" class="dropdown-item">Thông tin cá nhân</a>
+            <a [routerLink]="['/customer-profile']" class="dropdown-item">Thông tin cá nhân</a>
             <a [routerLink]="['/login']" class="dropdown-item">Đăng nhập</a>
             <a [routerLink]="['/register']" class="dropdown-item">Đăng ký</a>
-          </div>
+          </div> -->
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
@@ -47,7 +47,7 @@
           </a>
           <div class="dropdown-menu-xl dropdown-menu">
             <div class="dropdown-menu-inner">
-              <a routerLinkActive="active" [routerLink]="['documentation/tutorial']"
+              <a routerLinkActive="active" [routerLink]="['/introduction']"
                 class="media d-flex align-items-center">
                 <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
                   <i class="ni ni-spaceship"></i>
@@ -87,33 +87,33 @@
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.facebook.com" target="_blank" data-toggle="tooltip"
-            title="Like us on Facebook">
+            title="HMS's Facebook">
             <i class="fa fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.instagram.com" target="_blank" data-toggle="tooltip"
-            title="Follow us on Instagram">
+            title="HMS's Instagram">
             <i class="fa fa-instagram"></i>
             <span class="nav-link-inner--text d-lg-none">Instagram</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://twitter.com" target="_blank" data-toggle="tooltip"
-            title="Follow us on Twitter">
+            title="Twitter">
             <i class="fa fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Star us on Github">
+          <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Thông báo">
             <i class="fa fa-bell"></i>
             <span class="nav-link-inner--text d-lg-none">Thông báo</span>
           </a>
         </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-navbar" target="_blank"
+        <li *ngIf="guestNavbar" class="nav-item d-none d-lg-block ml-lg-4">
+          <a [routerLink]="['/register']" target="_blank"
             class="btn btn-neutral btn-icon">
             <span class="btn-inner--icon">
               <i class="fa fa-key mr-2"></i>
@@ -121,20 +121,62 @@
             <span class="nav-link-inner--text">Đăng ký </span>
           </a>
         </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-navbar" target="_blank"
+        <li *ngIf="guestNavbar" class="nav-item d-none d-lg-block ml-lg-4">
+          <a [routerLink]="['/login']" target="_blank"
             class="btn btn-neutral btn-icon">
             <span class="btn-inner--icon">
               <i class="fa fa-lock mr-2"></i>
             </span>
-            <span class="nav-link-inner--text">Đăng nhập</span>
+            <span class="nav-link-inner--text" >Đăng nhập</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="guestNavbar" class="nav-item">
           <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Star us on Github">
             <i class="fa fa-user"></i>
             <span class="nav-link-inner--text d-lg-none">Người dùng</span>
           </a>
+        </li>
+        <li *ngIf="customerNavbar" class="nav-item" ngbDropdown placement="bottom-right">
+          <a class="nav-link pr-0" role="button" ngbDropdownToggle>
+            <div class="media align-items-center">
+              <span class="avatar avatar-sm rounded-circle">
+                <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
+              </span>
+              <div class="media-body ml-2 d-none d-lg-block">
+                <span class="mb-0 text-sm  font-weight-bold">{{username}}</span>
+              </div>
+            </div>
+          </a>
+          <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
+            <div class=" dropdown-header noti-title">
+              <h6 class="text-overflow m-0">Welcome!</h6>
+            </div>
+            <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
+              <i class="ni ni-single-02"></i>
+              <span>Xem thông tin</span>
+            </a>
+            <a routerLinkActive="active" [routerLink]="['/customer-schedule']" class="dropdown-item">
+              <i class="ni ni-calendar-grid-58"></i>
+              <span>Xem lịch đẵ đặt</span>
+            </a>
+            <a routerLinkActive="active" [routerLink]="['/customer-history']" class="dropdown-item">
+              <i class="ni ni-calendar-grid-58"></i>
+              <span>Xem lịch sử đặt hàng</span>
+            </a>
+            <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
+              <i class="fas fa-lock"></i>
+              <span>Đổi mật khẩu</span>
+            </a>
+            <a routerLinkActive="active" [routerLink]="['/support']" class="dropdown-item">
+              <i class="ni ni-support-16"></i>
+              <span>Liên hệ & Hỗ trợ</span>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a (click)="logout()" class="dropdown-item">
+              <i class="ni ni-user-run"></i>
+              <span>Đăng xuất</span>
+            </a>
+          </div>
         </li>
       </ul>
     </div>
@@ -142,7 +184,7 @@
 </nav>
 
 <!-- NAVBAR - ADMIN / Quản lý -->
-<nav *ngIf="true" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+<nav *ngIf="adminNavbar || cleanerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active"
@@ -167,7 +209,7 @@
               <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
             </span>
             <div class="media-body ml-2 d-none d-lg-block">
-              <span class="mb-0 text-sm  font-weight-bold">Người dùng 1</span>
+              <span class="mb-0 text-sm  font-weight-bold">{{username}}</span>
             </div>
           </div>
         </a>
@@ -175,20 +217,12 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">Welcome!</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>Xem thông tin</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/customer-schedule']" class="dropdown-item">
-            <i class="ni ni-single-02"></i>
-            <span>Xem lịch đẵ đặt</span>
-          </a>
-          <a routerLinkActive="active" [routerLink]="['/customer-history']" class="dropdown-item">
-            <i class="ni ni-single-02"></i>
-            <span>Xem lịch sử đặt hàng</span>
-          </a>
           <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
-            <i class="ni ni-calendar-grid-58"></i>
+            <i class="fas fa-lock"></i>
             <span>Đổi mật khẩu</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/support']" class="dropdown-item">
